# ioPerformanceStudy

./: .gitignore  CMakeLists.txt  README.md  benchmarks.md
.circleci/: config.yml
include/: IO_perf.hh
src/: IO_perf.cc
tests/: CMakeLists.txt  io.cc
